--- a/exercise/03.md
+++ b/exercise/03.md
@@ -19,9 +19,9 @@ fig, axes = plt.subplots(1, 3, figsize=(12, 4))
 for ax, kappa in zip(axes, [1, 10, 100]):
     pdf = vonmises.pdf(theta, kappa)
     ax.plot(theta, pdf)
-    ax.set_title(f'κ = {kappa}')
-    ax.set_xlabel('θ')
-    ax.set_ylabel('Density')
+    ax.set_title(f"κ = {kappa}")
+    ax.set_xlabel("θ")
+    ax.set_ylabel("Density")
 
 plt.tight_layout()
 plt.show()
