--- a/series/01.md
+++ b/series/01.md
@@ -318,19 +318,19 @@ print(f"2成分での累積寄与率: {cumsum[1]:.2%}")
 plt.figure(figsize=(10, 4))
 
 plt.subplot(1, 2, 1)
-scatter = plt.scatter(X_pca[:, 0], X_pca[:, 1], c=y, cmap='tab10', alpha=0.5, s=10)
-plt.colorbar(scatter, label='Digit')
-plt.xlabel('PC1')
-plt.ylabel('PC2')
-plt.title('PCA: 64D → 2D（約28%の分散を保持）')
+scatter = plt.scatter(X_pca[:, 0], X_pca[:, 1], c=y, cmap="tab10", alpha=0.5, s=10)
+plt.colorbar(scatter, label="Digit")
+plt.xlabel("PC1")
+plt.ylabel("PC2")
+plt.title("PCA: 64D → 2D（約28%の分散を保持）")
 
 plt.subplot(1, 2, 2)
 pca_full = PCA().fit(X)
 plt.plot(np.cumsum(pca_full.explained_variance_ratio_))
-plt.xlabel('Number of Components')
-plt.ylabel('Cumulative Explained Variance')
-plt.title('累積寄与率')
-plt.axhline(y=0.9, color='r', linestyle='--', label='90%')
+plt.xlabel("Number of Components")
+plt.ylabel("Cumulative Explained Variance")
+plt.title("累積寄与率")
+plt.axhline(y=0.9, color="r", linestyle="--", label="90%")
 plt.legend()
 
 plt.tight_layout()
@@ -349,19 +349,25 @@ from sklearn.datasets import make_blobs
 X, y = make_blobs(n_samples=100, centers=2, random_state=42, cluster_std=1.5)
 
 # 線形SVM
-svm = SVC(kernel='linear', C=1.0)
+svm = SVC(kernel="linear", C=1.0)
 svm.fit(X, y)
 
 # 決定境界の可視化
 plt.figure(figsize=(8, 6))
 
 # データ点
-plt.scatter(X[:, 0], X[:, 1], c=y, cmap='coolwarm', edgecolors='k', s=50)
+plt.scatter(X[:, 0], X[:, 1], c=y, cmap="coolwarm", edgecolors="k", s=50)
 
 # サポートベクターを強調
-plt.scatter(svm.support_vectors_[:, 0], svm.support_vectors_[:, 1], 
-            s=200, facecolors='none', edgecolors='green', linewidths=2,
-            label=f'Support Vectors (n={len(svm.support_vectors_)})')
+plt.scatter(
+    svm.support_vectors_[:, 0],
+    svm.support_vectors_[:, 1],
+    s=200,
+    facecolors="none",
+    edgecolors="green",
+    linewidths=2,
+    label=f"Support Vectors (n={len(svm.support_vectors_)})",
+)
 
 # 決定境界とマージン
 ax = plt.gca()
@@ -375,12 +381,19 @@ xy = np.vstack([XX.ravel(), YY.ravel()]).T
 Z = svm.decision_function(xy).reshape(XX.shape)
 
 # 決定境界（実線）とマージン（破線）
-ax.contour(XX, YY, Z, colors='k', levels=[-1, 0, 1], 
-           linestyles=['--', '-', '--'], linewidths=[1, 2, 1])
+ax.contour(
+    XX,
+    YY,
+    Z,
+    colors="k",
+    levels=[-1, 0, 1],
+    linestyles=["--", "-", "--"],
+    linewidths=[1, 2, 1],
+)
 
-plt.xlabel('Feature 1')
-plt.ylabel('Feature 2')
-plt.title('SVM: マージン最大化の幾何学')
+plt.xlabel("Feature 1")
+plt.ylabel("Feature 2")
+plt.title("SVM: マージン最大化の幾何学")
 plt.legend()
 plt.show()
 ```
@@ -390,10 +403,12 @@ plt.show()
 ```01_bow_order_loss.py
 from collections import Counter
 
+
 def bag_of_words(sentence):
     """文を単語の袋（頻度辞書）に変換"""
     words = sentence.lower().split()
     return Counter(words)
+
 
 # 意味が異なるが、Bag-of-Wordsでは同一
 sentence1 = "the cat chased the dog"
