--- a/series/03.md
+++ b/series/03.md
@@ -251,8 +251,8 @@ $$\text{grad}_S f(\mathbf{x}) = \nabla f(\mathbf{x}) - (\nabla f(\mathbf{x})^\to
 
 ```03_spherical_projection_pseudocode.py
 # 疑似コード
-x = x - lr * grad  # ユークリッド空間での更新
-x = x / x.norm()   # 球面への射影
+# x = x - lr * grad  # ユークリッド空間での更新
+# x = x / x.norm()  # 球面への射影
 ```
 
 これは「射影勾配法」の一種であり、学習率が十分小さければ、リーマン勾配降下法に近い挙動を示す。
@@ -271,18 +271,20 @@ x = x / x.norm()   # 球面への射影
 import torch
 import torch.nn.functional as F
 
+
 def l2_normalize(x, dim=-1, eps=1e-12):
     """L2正規化（球面への射影）
-    
+
     Args:
         x: 入力テンソル
         dim: 正規化する次元
         eps: 数値安定性のための小さな値
-    
+
     Returns:
         単位ノルムに正規化されたテンソル
     """
     return F.normalize(x, p=2, dim=dim, eps=eps)
+
 
 # 使用例
 embeddings = torch.randn(32, 768)  # バッチサイズ32、次元768
@@ -301,38 +303,42 @@ print(f"ノルムの標準偏差: {normalized.norm(dim=-1).std():.6f}")  # ≈ 0
 import torch
 import torch.nn.functional as F
 
+
 def demonstrate_instability():
     """float16での数値不安定性の例"""
-    
-   # float16では非常に小さい値が0に丸められやすい（アンダーフロー）
-   # min positive normal ≈ 6e-5 なので、それより十分小さい値は 0 になりやすい
-   very_small = torch.finfo(torch.float16).tiny / 1024  # float32では非ゼロ
-   small_fp16 = torch.full((3,), very_small, dtype=torch.float32).half()  # → 0 になりうる
-    
+
+    # float16では非常に小さい値が0に丸められやすい（アンダーフロー）
+    # min positive normal ≈ 6e-5 なので、それより十分小さい値は 0 になりやすい
+    very_small = torch.finfo(torch.float16).tiny / 1024  # float32では非ゼロ
+    small_fp16 = torch.full(
+        (3,), very_small, dtype=torch.float32
+    ).half()  # → 0 になりうる
+
     print(f"入力 (float16): {small_fp16}")
     print(f"ノルム: {small_fp16.norm()}")  # 非常に小さい、または0
-    
-   # eps なしで正規化すると不安定（ノルムが 0 に丸められると NaN/Inf）
-   try:
-       normalized_unsafe = small_fp16 / small_fp16.norm()
-       print(f"Unsafe (epsなし): {normalized_unsafe}")
-   except Exception as e:
-       print(f"Unsafe normalization failed: {e}")
- 
-   # 実務では「ゼロベクトルが混ざる」ケースも多い（マスクや初期化など）
-   zero_fp16 = torch.zeros(3, dtype=torch.float16)
-   print(f"ゼロ入力 (float16): {zero_fp16}, ノルム: {zero_fp16.norm()}")
-   print(f"ゼロをepsなしで割る: {zero_fp16 / zero_fp16.norm()}")  # NaN が出る
 
-   # 安全策：ノルム計算をfloat32で行い、epsで保護して正規化
-   normalized_safe = F.normalize(small_fp16.float(), eps=1e-12).half()
-   print(f"Safe (eps使用, normはfloat32): {normalized_safe}")
-    
+    # eps なしで正規化すると不安定（ノルムが 0 に丸められると NaN/Inf）
+    try:
+        normalized_unsafe = small_fp16 / small_fp16.norm()
+        print(f"Unsafe (epsなし): {normalized_unsafe}")
+    except Exception as e:
+        print(f"Unsafe normalization failed: {e}")
+
+    # 実務では「ゼロベクトルが混ざる」ケースも多い（マスクや初期化など）
+    zero_fp16 = torch.zeros(3, dtype=torch.float16)
+    print(f"ゼロ入力 (float16): {zero_fp16}, ノルム: {zero_fp16.norm()}")
+    print(f"ゼロをepsなしで割る: {zero_fp16 / zero_fp16.norm()}")  # NaN が出る
+
+    # 安全策：ノルム計算をfloat32で行い、epsで保護して正規化
+    normalized_safe = F.normalize(small_fp16.float(), eps=1e-12).half()
+    print(f"Safe (eps使用, normはfloat32): {normalized_safe}")
+
     # 勾配計算時にゼロ近傍で問題が起きる例
     x = torch.tensor([1e-7, 1e-7, 1e-7], requires_grad=True)
     y = x / (x.norm() + 1e-12)  # eps で保護
     y.sum().backward()
     print(f"勾配 (eps保護あり): {x.grad}")
+
 
 demonstrate_instability()
 ```
@@ -343,37 +349,41 @@ demonstrate_instability()
 ### nGPT風の設計：球面制約の維持
 
 ```03_normalized_linear.py
+import torch
 import torch.nn as nn
+import torch.nn.functional as F
+
 
 class NormalizedLinear(nn.Module):
     """正規化を含む線形層（nGPT風）"""
-    
+
     def __init__(self, in_features, out_features, eps=1e-12):
         super().__init__()
         self.linear = nn.Linear(in_features, out_features, bias=False)
         self.eps = eps
-        
+
         # 重みも正規化して初期化
         with torch.no_grad():
             self.linear.weight.data = F.normalize(
                 self.linear.weight.data, dim=1, eps=eps
             )
-    
+
     def forward(self, x):
         # 入力は正規化済みと仮定
         out = self.linear(x)
         # 出力を正規化
         return F.normalize(out, dim=-1, eps=self.eps)
 
+
 class NormalizedResidual(nn.Module):
     """正規化を含む残差接続（nGPT風）"""
-    
+
     def __init__(self, module, alpha=0.1, eps=1e-12):
         super().__init__()
         self.module = module
         self.alpha = alpha  # 残差のスケール
         self.eps = eps
-    
+
     def forward(self, x):
         # 残差を加算
         out = x + self.alpha * self.module(x)
@@ -391,14 +401,16 @@ import numpy as np
 import matplotlib.pyplot as plt
 from scipy.special import iv  # ベッセル関数
 
+
 def vmf_pdf_2d(theta, kappa):
     """2次元（円上）のvMF分布の確率密度
-    
+
     平均方向を θ=0 として、角度 θ での密度を返す
     """
     # 2次元の場合、正規化定数は 1/(2π I_0(κ))
     normalization = 1 / (2 * np.pi * iv(0, kappa))
     return normalization * np.exp(kappa * np.cos(theta))
+
 
 # 異なる κ での分布を可視化
 fig, axes = plt.subplots(1, 2, figsize=(14, 5))
@@ -414,11 +426,11 @@ for kappa in kappas:
         pdf = np.ones_like(theta) / (2 * np.pi)
     else:
         pdf = vmf_pdf_2d(theta, kappa)
-    ax.plot(theta, pdf, label=f'κ = {kappa}')
+    ax.plot(theta, pdf, label=f"κ = {kappa}")
 
-ax.set_xlabel('Angle θ (radians)')
-ax.set_ylabel('Probability Density')
-ax.set_title('von Mises-Fisher Distribution (2D)')
+ax.set_xlabel("Angle θ (radians)")
+ax.set_ylabel("Probability Density")
+ax.set_title("von Mises-Fisher Distribution (2D)")
 ax.legend()
 ax.set_xlim(-np.pi, np.pi)
 
@@ -432,10 +444,10 @@ for kappa in kappas:
     # 極座標での x, y
     x = r * np.cos(theta)
     y = r * np.sin(theta)
-    ax.plot(x, y, label=f'κ = {kappa}')
+    ax.plot(x, y, label=f"κ = {kappa}")
 
-ax.set_aspect('equal')
-ax.set_title('vMF Distribution on Circle')
+ax.set_aspect("equal")
+ax.set_title("vMF Distribution on Circle")
 ax.legend()
 
 plt.tight_layout()
