--- a/series/07.md
+++ b/series/07.md
@@ -258,31 +258,31 @@ $\kappa$ **の崩壊**：学習が進むと、すべての $\kappa$ が極端に
 import torch
 import torch.nn as nn
 import torch.nn.functional as F
-import math
+
 
 class vMFLayer(nn.Module):
     """vMF分布のパラメータを出力する層
-    
+
     入力から平均方向μと集中度κを推定する。
     """
-    
+
     def __init__(self, input_dim, output_dim, kappa_min=1.0, kappa_max=100.0):
         super().__init__()
         self.output_dim = output_dim
         self.kappa_min = kappa_min
         self.kappa_max = kappa_max
-        
+
         # μを出力する層（正規化前）
         self.mu_layer = nn.Linear(input_dim, output_dim)
-        
+
         # log κを出力する層（スカラー）
         self.kappa_layer = nn.Linear(input_dim, 1)
-    
+
     def forward(self, x):
         """
         Args:
             x: 入力テンソル [batch, input_dim]
-        
+
         Returns:
             mu: 平均方向 [batch, output_dim]（単位ベクトル）
             kappa: 集中度 [batch, 1]
@@ -290,13 +290,15 @@ class vMFLayer(nn.Module):
         # 平均方向（正規化して単位ベクトルに）
         mu = self.mu_layer(x)
         mu = F.normalize(mu, dim=-1)
-        
+
         # 集中度（正の値に制約）
         log_kappa = self.kappa_layer(x)
         # Softplusで正の値に、さらに範囲を制限
         kappa = F.softplus(log_kappa)
-        kappa = self.kappa_min + (self.kappa_max - self.kappa_min) * torch.sigmoid(kappa - 5)
-        
+        kappa = self.kappa_min + (self.kappa_max - self.kappa_min) * torch.sigmoid(
+            kappa - 5
+        )
+
         return mu, kappa
 ```
 
@@ -305,51 +307,59 @@ class vMFLayer(nn.Module):
 vMF分布からのサンプリングは、rejection samplingやWood's algorithmを使う。以下は高次元で効率的な方法：
 
 ```07_vmf_sampling.py
+import math
+
+import torch
+import torch.nn.functional as F
+
+
 def sample_vmf(mu, kappa, num_samples=1):
     """vMF分布からサンプリング（Wood's algorithm）
-    
+
     Args:
         mu: 平均方向 [batch, dim]
         kappa: 集中度 [batch, 1]
         num_samples: サンプル数
-    
+
     Returns:
         samples: サンプル [batch, num_samples, dim]
     """
     batch_size, dim = mu.shape
     device = mu.device
-    
+
     # κが非常に小さい場合は一様分布からサンプル
     if kappa.max() < 1e-6:
         samples = torch.randn(batch_size, num_samples, dim, device=device)
         return F.normalize(samples, dim=-1)
-    
+
     # Householder変換でμを北極に写す
     # e1 = [1, 0, 0, ..., 0]
     e1 = torch.zeros(dim, device=device)
     e1[0] = 1.0
-    
+
     results = []
     for _ in range(num_samples):
         # wをサンプル（μ方向の成分）
         w = _sample_w(kappa.squeeze(-1), dim)  # [batch]
-        
+
         # 球面上の一様な方向をサンプル（μに直交する成分）
         v = torch.randn(batch_size, dim - 1, device=device)
         v = F.normalize(v, dim=-1)
-        
+
         # 球面座標からデカルト座標へ
-        sqrt_term = torch.sqrt(torch.clamp(1 - w ** 2, min=1e-10))
-        
+        sqrt_term = torch.sqrt(torch.clamp(1 - w**2, min=1e-10))
+
         # 北極周りのサンプルを構成
         sample_around_north = torch.zeros(batch_size, dim, device=device)
         sample_around_north[:, 0] = w
         sample_around_north[:, 1:] = sqrt_term.unsqueeze(-1) * v
-        
+
         # Householder変換でμ周りに回転
-        sample = _householder_rotation(sample_around_north, e1.expand(batch_size, -1), mu)
+        sample = _householder_rotation(
+            sample_around_north, e1.expand(batch_size, -1), mu
+        )
         results.append(sample)
-    
+
     return torch.stack(results, dim=1)
 
 
@@ -357,44 +367,44 @@ def _sample_w(kappa, dim):
     """vMF分布のw成分をサンプル（rejection sampling）"""
     device = kappa.device
     batch_size = kappa.shape[0]
-    
+
     # 近似パラメータ
-    c = torch.sqrt(4 * kappa ** 2 + (dim - 1) ** 2)
+    c = torch.sqrt(4 * kappa**2 + (dim - 1) ** 2)
     b = (c - 2 * kappa) / (dim - 1)
     a = ((dim - 1) + c) / (2 * kappa)
-    
+
     # Rejection sampling
     w = torch.zeros(batch_size, device=device)
     done = torch.zeros(batch_size, dtype=torch.bool, device=device)
-    
+
     max_iter = 1000
     for _ in range(max_iter):
         if done.all():
             break
-        
+
         # 提案分布からサンプル
         eps = torch.rand(batch_size, device=device)
         u = torch.rand(batch_size, device=device)
-        
+
         z = torch.cos(math.pi * eps)
         w_proposal = (1 + b * z) / (b + z)
-        
+
         # 受理確率
         t = kappa * w_proposal + (dim - 1) * torch.log(1 - a * w_proposal)
         accept = (dim - 1) * torch.log(1 - a * b) - 1 + torch.log(u) < t
-        
+
         w = torch.where(~done & accept, w_proposal, w)
         done = done | accept
-    
+
     return w
 
 
 def _householder_rotation(x, u, v):
     """Householder反射を用いてuをvに写す変換をxに適用
-    
+
     uとvが単位ベクトルのとき、w = normalize(v - u) に対する
     Householder反射 H = I - 2ww^T は、uをvに写す。
-    
+
     注意：厳密には反射であり回転ではない（行列式が-1）。
     vMFサンプリングの文脈では、北極周りの点をμ周りに移動させる
     という目的は多くの場合達成できる。ただし、以下の場合は
@@ -406,20 +416,20 @@ def _householder_rotation(x, u, v):
     # 反射軸: w = normalize(v - u)
     w = v - u
     w_norm = w.norm(dim=-1, keepdim=True)
-    
+
     # u ≈ v の場合（反射不要）
     mask = (w_norm < 1e-6).squeeze(-1)
     if mask.all().item():
         return x
-    
+
     w = w / (w_norm + 1e-8)
-    
+
     # Householder反射: x' = x - 2(x·w)w
     x_reflected = x - 2 * (x * w).sum(dim=-1, keepdim=True) * w
-    
+
     # u ≈ v の場合は元のxを返す
     x_result = torch.where(mask.unsqueeze(-1), x, x_reflected)
-    
+
     return x_result
 ```
 
@@ -429,42 +439,47 @@ def _householder_rotation(x, u, v):
 > **以下の実装は高κ・高次元での漸近近似に基づく。** κが小さい領域（まさに不確実性が高く重要な領域）では近似誤差が大きくなる。厳密な計算が必要な場合は、scipy.special.ive（スケール付きBessel関数）等を使った安定実装を検討すること。詳細はDiethe (2015) を参照。
 
 ```07_vmf_kl_divergence.py
+import math
+
+import torch
+
+
 def kl_divergence_vmf_approx(mu1, kappa1, mu2, kappa2):
     """2つのvMF分布間のKLダイバージェンス【高κ近似版】
-    
+
     KL(vMF(μ1, κ1) || vMF(μ2, κ2))
-    
+
     WARNING: この実装は高κ・高次元での漸近近似を使用。
     κ < 10 程度の領域では誤差が大きくなる可能性がある。
-    
+
     Args:
         mu1, mu2: 平均方向 [batch, dim]
         kappa1, kappa2: 集中度 [batch, 1]
-    
+
     Returns:
         kl: KLダイバージェンス [batch]（近似値）
     """
     dim = mu1.shape[-1]
-    
+
     # コサイン類似度
     cos_sim = (mu1 * mu2).sum(dim=-1, keepdim=True)
-    
+
     # Bessel関数の比（高κ近似）
     A1 = _bessel_ratio_approx(kappa1, dim)
-    
+
     # 正規化定数の差（対数、高κ近似）
     log_C1 = _log_normalizer_vmf_approx(kappa1, dim)
     log_C2 = _log_normalizer_vmf_approx(kappa2, dim)
-    
+
     # KLダイバージェンス
     kl = log_C2 - log_C1 + kappa1 * A1 - kappa2 * A1 * cos_sim
-    
+
     return kl.squeeze(-1)
 
 
 def _bessel_ratio_approx(kappa, dim):
     """Bessel関数の比 I_{d/2}(κ) / I_{d/2-1}(κ) の高κ近似
-    
+
     WARNING: κが小さい（< 10程度）場合、この近似は不正確。
     厳密計算には scipy.special.ive を使用すること。
     """
@@ -475,10 +490,10 @@ def _bessel_ratio_approx(kappa, dim):
 
 def _log_normalizer_vmf_approx(kappa, dim):
     """vMF分布の対数正規化定数 log C_d(κ) の高κ近似
-    
+
     WARNING: κが小さい（< 10程度）場合、この近似は不正確。
     厳密計算には scipy.special.ive を使用すること。
-    
+
     近似式: log C ≈ (d/2 - 1) * log κ - d/2 * log(2π) - κ
     （Stirling近似に基づく、高κ・高次元での漸近展開）
     """
@@ -489,13 +504,13 @@ def _log_normalizer_vmf_approx(kappa, dim):
 # 参考：厳密計算が必要な場合のスケルトン
 def _log_normalizer_vmf_exact(kappa, dim):
     """vMF分布の対数正規化定数（厳密版、要scipy）
-    
+
     log C_d(κ) = (d/2 - 1) * log κ - (d/2) * log(2π) - log I_{d/2-1}(κ)
-    
+
     数値安定性のため、スケール付きBessel関数 ive を使用：
     I_ν(κ) = ive(ν, κ) * exp(κ)
     よって log I_ν(κ) = log(ive(ν, κ)) + κ
-    
+
     WARNING: この関数はNumPy配列またはPython floatを想定。
     PyTorch tensorを渡す場合は事前に変換すること：
         kappa_np = kappa.detach().cpu().numpy()
@@ -528,72 +543,75 @@ kl_divergence_vmf = kl_divergence_vmf_approx
 ```07_ood_detector.py
 import warnings
 
+import torch
+
+
 class OODDetector:
     """κに基づくOOD検知
-    
+
     WARNING: 閾値はデータセット・モデルに依存する。
     必ず検証セットで校正すること。
     """
-    
+
     def __init__(self, threshold=10.0):
         self.threshold = threshold
         self._is_calibrated = False
-    
+
     def calibrate(self, kappa_in, kappa_out, target_fpr=0.05):
         """検証セットで閾値を校正
-        
+
         Args:
             kappa_in: 分布内データのκ。1D tensor [n_in] を想定。
                       2D [n_in, 1] の場合は自動的にsqueezeされる。
             kappa_out: 分布外データのκ。1D tensor [n_out] を想定。
                        2D [n_out, 1] の場合は自動的にsqueezeされる。
             target_fpr: 目標偽陽性率（分布内をOODと誤判定する率）
-                        
+
                         NOTE: 本実装では「分布内サンプルを誤ってOODと判定する率」を
                         FPR（False Positive Rate）と定義している。
                         文献によっては「OODサンプルを誤って分布内と判定する率」を
                         FPRとする場合もあるため、比較時は定義に注意すること。
-        
+
         Returns:
             calibrated_threshold: 校正された閾値
         """
         # 形状を1Dに統一
         kappa_in = kappa_in.squeeze()
         kappa_out = kappa_out.squeeze()
-        
+
         # 分布内データのκ分位点から閾値を決定
         # target_fpr = 0.05 なら、分布内の5%がOODと判定される閾値
         self.threshold = torch.quantile(kappa_in, target_fpr).item()
         self._is_calibrated = True
-        
+
         # 検出率（分布外をOODと正しく判定する率）を計算
         tpr = (kappa_out < self.threshold).float().mean().item()
-        
+
         print(f"Calibrated threshold: {self.threshold:.2f}")
         print(f"  FPR (in-dist as OOD): {target_fpr:.1%}")
         print(f"  TPR (out-dist as OOD): {tpr:.1%}")
-        
+
         return self.threshold
-    
+
     def is_ood(self, kappa):
         """κが閾値以下ならOODと判定
-        
+
         Args:
             kappa: 推定された集中度 [batch, 1] または [batch]
-        
+
         Returns:
             ood_mask: OODフラグ [batch]
         """
         if not self._is_calibrated:
             warnings.warn("OODDetector is not calibrated. Results may be unreliable.")
-        return (kappa.squeeze(-1) < self.threshold)
-    
+        return kappa.squeeze(-1) < self.threshold
+
     def get_confidence(self, kappa):
         """κを[0, 1]の確信度スコアに変換
-        
+
         Args:
             kappa: 集中度 [batch, 1] または [batch]
-        
+
         Returns:
             confidence: 確信度スコア [batch]
         """
@@ -621,28 +639,31 @@ print(f"  Confidence: {detector.get_confidence(kappa_out_of_distribution)}")
 ### 座標フリーの分布比較
 
 ```07_coordinate_free_comparison.py
+import torch
+
+
 def compare_distributions_coordinate_free(kappa1, kappa2):
     """座標系に依存しない分布の比較
-    
+
     確信度（κ）のみを使った比較。
     座標系の整列なしで、2つのモデルの「確信度」を比較できる。
-    
+
     Args:
         kappa1, kappa2: 2つのモデルからのκ [batch, 1]
-    
+
     Returns:
         comparison: 比較結果の辞書
     """
     kappa1 = kappa1.squeeze(-1)
     kappa2 = kappa2.squeeze(-1)
-    
+
     return {
-        'kappa1_mean': kappa1.mean().item(),
-        'kappa2_mean': kappa2.mean().item(),
-        'kappa_diff': (kappa1 - kappa2).mean().item(),
-        'kappa_ratio': (kappa1 / (kappa2 + 1e-8)).mean().item(),
-        'more_confident': 'model1' if kappa1.mean() > kappa2.mean() else 'model2',
-        'correlation': torch.corrcoef(torch.stack([kappa1, kappa2]))[0, 1].item()
+        "kappa1_mean": kappa1.mean().item(),
+        "kappa2_mean": kappa2.mean().item(),
+        "kappa_diff": (kappa1 - kappa2).mean().item(),
+        "kappa_ratio": (kappa1 / (kappa2 + 1e-8)).mean().item(),
+        "more_confident": "model1" if kappa1.mean() > kappa2.mean() else "model2",
+        "correlation": torch.corrcoef(torch.stack([kappa1, kappa2]))[0, 1].item(),
     }
 
 
@@ -651,8 +672,7 @@ kappa_model_a = torch.tensor([50.0, 30.0, 45.0, 20.0])
 kappa_model_b = torch.tensor([40.0, 35.0, 50.0, 15.0])
 
 comparison = compare_distributions_coordinate_free(
-    kappa_model_a.unsqueeze(-1),
-    kappa_model_b.unsqueeze(-1)
+    kappa_model_a.unsqueeze(-1), kappa_model_b.unsqueeze(-1)
 )
 
 print("Coordinate-free comparison:")
@@ -670,43 +690,44 @@ for k, v in comparison.items():
 import matplotlib.pyplot as plt
 import numpy as np
 
+
 def visualize_attention_with_uncertainty(sentence, attention_weights, kappa_values):
     """確信度付きAttentionの可視化
-    
+
     Args:
         sentence: 単語のリスト
         attention_weights: Attention重み [seq_len, seq_len]
         kappa_values: 各トークンのκ値 [seq_len]
     """
     fig, axes = plt.subplots(1, 2, figsize=(14, 5))
-    
+
     # 左：Attentionヒートマップ
     ax1 = axes[0]
-    im = ax1.imshow(attention_weights, cmap='Blues')
+    im = ax1.imshow(attention_weights, cmap="Blues")
     ax1.set_xticks(range(len(sentence)))
     ax1.set_yticks(range(len(sentence)))
-    ax1.set_xticklabels(sentence, rotation=45, ha='right')
+    ax1.set_xticklabels(sentence, rotation=45, ha="right")
     ax1.set_yticklabels(sentence)
-    ax1.set_xlabel('Key')
-    ax1.set_ylabel('Query')
-    ax1.set_title('Attention Weights')
+    ax1.set_xlabel("Key")
+    ax1.set_ylabel("Query")
+    ax1.set_title("Attention Weights")
     plt.colorbar(im, ax=ax1)
-    
+
     # 右：確信度バー
     ax2 = axes[1]
     colors = plt.cm.RdYlGn(kappa_values / kappa_values.max())
-    bars = ax2.barh(range(len(sentence)), kappa_values, color=colors)
+    ax2.barh(range(len(sentence)), kappa_values, color=colors)
     ax2.set_yticks(range(len(sentence)))
     ax2.set_yticklabels(sentence)
-    ax2.set_xlabel('Confidence (κ)')
-    ax2.set_title('Per-token Confidence')
-    ax2.axvline(x=10, color='r', linestyle='--', label='OOD threshold')
+    ax2.set_xlabel("Confidence (κ)")
+    ax2.set_title("Per-token Confidence")
+    ax2.axvline(x=10, color="r", linestyle="--", label="OOD threshold")
     ax2.legend()
-    
+
     plt.tight_layout()
-    plt.savefig('attention_with_uncertainty.png', dpi=150)
+    plt.savefig("attention_with_uncertainty.png", dpi=150)
     plt.close()
-    
+
     print("Saved: attention_with_uncertainty.png")
 
 
@@ -715,13 +736,15 @@ sentence = ["The", "quantum", "cat", "sat", "sleepily"]
 np.random.seed(42)
 
 # Attentionは「cat」と「sat」に集中するパターン
-attention = np.array([
-    [0.3, 0.1, 0.3, 0.2, 0.1],
-    [0.1, 0.4, 0.2, 0.2, 0.1],
-    [0.2, 0.1, 0.4, 0.2, 0.1],
-    [0.1, 0.1, 0.3, 0.4, 0.1],
-    [0.2, 0.1, 0.2, 0.2, 0.3],
-])
+attention = np.array(
+    [
+        [0.3, 0.1, 0.3, 0.2, 0.1],
+        [0.1, 0.4, 0.2, 0.2, 0.1],
+        [0.2, 0.1, 0.4, 0.2, 0.1],
+        [0.1, 0.1, 0.3, 0.4, 0.1],
+        [0.2, 0.1, 0.2, 0.2, 0.3],
+    ]
+)
 
 # 確信度：一般的な単語は高κ、専門用語「quantum」は低κ
 kappa = np.array([45.0, 8.0, 50.0, 55.0, 35.0])
