--- a/exercise/02.md
+++ b/exercise/02.md
@@ -19,8 +19,8 @@ for _ in range(1000):
     distances.append(np.linalg.norm(x - y))
 
 plt.hist(distances, bins=30)
-plt.xlabel('Euclidean Distance')
-plt.title('Distance distribution in 100D')
+plt.xlabel("Euclidean Distance")
+plt.title("Distance distribution in 100D")
 plt.show()
 print(f"Mean: {np.mean(distances):.2f}, Std: {np.std(distances):.2f}")
 ```
@@ -36,6 +36,10 @@ print(f"Mean: {np.mean(distances):.2f}, Std: {np.std(distances):.2f}")
 **解答:**
 
 ```02_angle_concentration.py
+import matplotlib.pyplot as plt
+import numpy as np
+
+
 angles = []
 for _ in range(1000):
     x = np.random.randn(100)
@@ -45,8 +49,8 @@ for _ in range(1000):
     angles.append(np.degrees(np.arccos(cos_sim)))
 
 plt.hist(angles, bins=30)
-plt.xlabel('Angle (degrees)')
-plt.title('Angle distribution in 100D')
+plt.xlabel("Angle (degrees)")
+plt.title("Angle distribution in 100D")
 plt.show()
 print(f"Mean: {np.mean(angles):.1f}°, Std: {np.std(angles):.1f}°")
 ```
