--- a/series/02.md
+++ b/series/02.md
@@ -267,6 +267,7 @@ import matplotlib.pyplot as plt
 
 np.random.seed(42)
 
+
 def distance_concentration(dims, n_samples=10000):
     """各次元での原点からの距離分布を計算"""
     results = []
@@ -274,14 +275,17 @@ def distance_concentration(dims, n_samples=10000):
         # 標準正規分布からサンプリング
         X = np.random.randn(n_samples, d)
         distances = np.linalg.norm(X, axis=1)
-        results.append({
-            'dim': d,
-            'mean': distances.mean(),
-            'std': distances.std(),
-            'relative_std': distances.std() / distances.mean(),
-            'distances': distances
-        })
+        results.append(
+            {
+                "dim": d,
+                "mean": distances.mean(),
+                "std": distances.std(),
+                "relative_std": distances.std() / distances.mean(),
+                "distances": distances,
+            }
+        )
     return results
+
 
 dims = [3, 10, 100, 1000]
 results = distance_concentration(dims)
@@ -290,15 +294,17 @@ results = distance_concentration(dims)
 print("次元 | 平均距離 | 標準偏差 | 相対標準偏差")
 print("-" * 45)
 for r in results:
-    print(f"{r['dim']:4d} | {r['mean']:8.2f} | {r['std']:8.2f} | {r['relative_std']:8.4f}")
+    print(
+        f"{r['dim']:4d} | {r['mean']:8.2f} | {r['std']:8.2f} | {r['relative_std']:8.4f}"
+    )
 
 # ヒストグラムの可視化
 fig, axes = plt.subplots(1, 4, figsize=(16, 3))
 for ax, r in zip(axes, results):
-    ax.hist(r['distances'], bins=50, density=True, alpha=0.7)
-    ax.axvline(r['mean'], color='red', linestyle='--', label=f'mean={r["mean"]:.1f}')
-    ax.set_title(f'd = {r["dim"]}')
-    ax.set_xlabel('Distance from origin')
+    ax.hist(r["distances"], bins=50, density=True, alpha=0.7)
+    ax.axvline(r["mean"], color="red", linestyle="--", label=f"mean={r['mean']:.1f}")
+    ax.set_title(f"d = {r['dim']}")
+    ax.set_xlabel("Distance from origin")
     ax.legend()
 plt.tight_layout()
 plt.show()
@@ -312,6 +318,7 @@ import matplotlib.pyplot as plt
 
 np.random.seed(42)
 
+
 def check_orthogonality(dims, n_pairs=5000):
     """ランダムな単位ベクトル対の内積分布を計算"""
     results = []
@@ -321,22 +328,25 @@ def check_orthogonality(dims, n_pairs=5000):
         v1 = v1 / np.linalg.norm(v1, axis=1, keepdims=True)
         v2 = np.random.randn(n_pairs, d)
         v2 = v2 / np.linalg.norm(v2, axis=1, keepdims=True)
-        
+
         # 内積の計算
         dots = np.sum(v1 * v2, axis=1)
-        
+
         # 角度に変換（度数法）
         angles = np.arccos(np.clip(dots, -1, 1)) * 180 / np.pi
-        
-        results.append({
-            'dim': d,
-            'dot_mean': dots.mean(),
-            'dot_std': dots.std(),
-            'angle_mean': angles.mean(),
-            'angle_std': angles.std(),
-            'angles': angles
-        })
+
+        results.append(
+            {
+                "dim": d,
+                "dot_mean": dots.mean(),
+                "dot_std": dots.std(),
+                "angle_mean": angles.mean(),
+                "angle_std": angles.std(),
+                "angles": angles,
+            }
+        )
     return results
+
 
 dims = [3, 10, 100, 1000]
 results = check_orthogonality(dims)
@@ -345,16 +355,18 @@ results = check_orthogonality(dims)
 print("次元 | 内積平均 | 内積標準偏差 | 角度平均 | 角度標準偏差")
 print("-" * 60)
 for r in results:
-    print(f"{r['dim']:4d} | {r['dot_mean']:+8.4f} | {r['dot_std']:12.4f} | "
-          f"{r['angle_mean']:8.1f}° | {r['angle_std']:8.1f}°")
+    print(
+        f"{r['dim']:4d} | {r['dot_mean']:+8.4f} | {r['dot_std']:12.4f} | "
+        f"{r['angle_mean']:8.1f}° | {r['angle_std']:8.1f}°"
+    )
 
 # 角度のヒストグラム
 fig, axes = plt.subplots(1, 4, figsize=(16, 3))
 for ax, r in zip(axes, results):
-    ax.hist(r['angles'], bins=50, density=True, alpha=0.7)
-    ax.axvline(90, color='red', linestyle='--', label='90°')
-    ax.set_title(f'd = {r["dim"]}')
-    ax.set_xlabel('Angle (degrees)')
+    ax.hist(r["angles"], bins=50, density=True, alpha=0.7)
+    ax.axvline(90, color="red", linestyle="--", label="90°")
+    ax.set_title(f"d = {r['dim']}")
+    ax.set_xlabel("Angle (degrees)")
     ax.set_xlim(0, 180)
     ax.legend()
 plt.tight_layout()
@@ -389,15 +401,15 @@ plt.figure(figsize=(10, 4))
 
 plt.subplot(1, 2, 1)
 plt.scatter(np.log10(frequencies), norms, alpha=0.5, s=10)
-plt.xlabel('log10(Frequency)')
-plt.ylabel('Norm (simulated)')
-plt.title('頻度とノルムの関係（シミュレーション）')
+plt.xlabel("log10(Frequency)")
+plt.ylabel("Norm (simulated)")
+plt.title("頻度とノルムの関係（シミュレーション）")
 
 plt.subplot(1, 2, 2)
 plt.scatter(np.log10(ranks), norms, alpha=0.5, s=10)
-plt.xlabel('log10(Rank)')
-plt.ylabel('Norm (simulated)')
-plt.title('順位とノルムの関係（シミュレーション）')
+plt.xlabel("log10(Rank)")
+plt.ylabel("Norm (simulated)")
+plt.title("順位とノルムの関係（シミュレーション）")
 
 plt.tight_layout()
 plt.show()
