--- a/series/03.md
+++ b/series/03.md
@@ -310,9 +310,7 @@ def demonstrate_instability():
     # float16では非常に小さい値が0に丸められやすい（アンダーフロー）
     # min positive normal ≈ 6e-5 なので、それより十分小さい値は 0 になりやすい
     very_small = torch.finfo(torch.float16).tiny / 1024  # float32では非ゼロ
-    small_fp16 = torch.full(
-        (3,), very_small, dtype=torch.float32
-    ).half()  # → 0 になりうる
+    small_fp16 = torch.full((3,), very_small, dtype=torch.float32).half()  # → 0 になりうる
 
     print(f"入力 (float16): {small_fp16}")
     print(f"ノルム: {small_fp16.norm()}")  # 非常に小さい、または0
@@ -364,9 +362,7 @@ class NormalizedLinear(nn.Module):
 
         # 重みも正規化して初期化
         with torch.no_grad():
-            self.linear.weight.data = F.normalize(
-                self.linear.weight.data, dim=1, eps=eps
-            )
+            self.linear.weight.data = F.normalize(self.linear.weight.data, dim=1, eps=eps)
 
     def forward(self, x):
         # 入力は正規化済みと仮定
@@ -397,8 +393,8 @@ class NormalizedResidual(nn.Module):
 ### vMF分布の可視化
 
 ```03_vmf_distribution_plot.py
-import numpy as np
 import matplotlib.pyplot as plt
+import numpy as np
 from scipy.special import iv  # ベッセル関数
 
 
