--- a/series/04.md
+++ b/series/04.md
@@ -415,9 +415,7 @@ print("Hard sample:", hard_sample)  # one-hotに近い
 # 温度による変化を可視化
 temperatures = [0.1, 0.5, 1.0, 2.0, 5.0]
 for tau in temperatures:
-    samples = torch.stack(
-        [gumbel_softmax(logits, tau, hard=False) for _ in range(1000)]
-    )
+    samples = torch.stack([gumbel_softmax(logits, tau, hard=False) for _ in range(1000)])
     print(f"τ={tau}: mean={samples.mean(dim=0)}, std={samples.std(dim=0)}")
 ```
 
@@ -496,12 +494,12 @@ def natural_gradient_step(params, loss_fn, data, lr=0.01, damping=1e-4):
 
     # 自然勾配 = F^{-1} * grad
     natural_grads = []
-    for g, f in zip(grads, fisher_diag):
+    for g, f in zip(grads, fisher_diag, strict=False):
         natural_grads.append(g.detach() / f)
 
     # パラメータ更新
     with torch.no_grad():
-        for p, ng in zip(params, natural_grads):
+        for p, ng in zip(params, natural_grads, strict=False):
             p.data -= lr * ng
 
     return loss.item()
