--- a/series/07.md
+++ b/series/07.md
@@ -295,9 +295,7 @@ class vMFLayer(nn.Module):
         log_kappa = self.kappa_layer(x)
         # Softplusで正の値に、さらに範囲を制限
         kappa = F.softplus(log_kappa)
-        kappa = self.kappa_min + (self.kappa_max - self.kappa_min) * torch.sigmoid(
-            kappa - 5
-        )
+        kappa = self.kappa_min + (self.kappa_max - self.kappa_min) * torch.sigmoid(kappa - 5)
 
         return mu, kappa
 ```
@@ -355,9 +353,7 @@ def sample_vmf(mu, kappa, num_samples=1):
         sample_around_north[:, 1:] = sqrt_term.unsqueeze(-1) * v
 
         # Householder変換でμ周りに回転
-        sample = _householder_rotation(
-            sample_around_north, e1.expand(batch_size, -1), mu
-        )
+        sample = _householder_rotation(sample_around_north, e1.expand(batch_size, -1), mu)
         results.append(sample)
 
     return torch.stack(results, dim=1)
@@ -603,7 +599,10 @@ class OODDetector:
             ood_mask: OODフラグ [batch]
         """
         if not self._is_calibrated:
-            warnings.warn("OODDetector is not calibrated. Results may be unreliable.")
+            warnings.warn(
+                "OODDetector is not calibrated. Results may be unreliable.",
+                stacklevel=2,
+            )
         return kappa.squeeze(-1) < self.threshold
 
     def get_confidence(self, kappa):
@@ -671,9 +670,7 @@ def compare_distributions_coordinate_free(kappa1, kappa2):
 kappa_model_a = torch.tensor([50.0, 30.0, 45.0, 20.0])
 kappa_model_b = torch.tensor([40.0, 35.0, 50.0, 15.0])
 
-comparison = compare_distributions_coordinate_free(
-    kappa_model_a.unsqueeze(-1), kappa_model_b.unsqueeze(-1)
-)
+comparison = compare_distributions_coordinate_free(kappa_model_a.unsqueeze(-1), kappa_model_b.unsqueeze(-1))
 
 print("Coordinate-free comparison:")
 for k, v in comparison.items():
