--- a/series/08.md
+++ b/series/08.md
@@ -335,9 +335,7 @@ class ResidualStack(nn.Module):
 
     def __init__(self, dim, num_blocks, hidden_dim=None):
         super().__init__()
-        self.blocks = nn.ModuleList(
-            [ResidualBlock(dim, hidden_dim) for _ in range(num_blocks)]
-        )
+        self.blocks = nn.ModuleList([ResidualBlock(dim, hidden_dim) for _ in range(num_blocks)])
 
     def forward(self, x, return_trajectory=False):
         """
@@ -508,9 +506,7 @@ def visualize_trajectory_2d(trajectory, title="State Trajectory"):
     colors = plt.cm.viridis(np.linspace(0, 1, batch_size))
 
     for i in range(min(batch_size, 20)):  # 最大20サンプル
-        ax.plot(
-            traj_2d[:, i, 0], traj_2d[:, i, 1], color=colors[i], alpha=0.5, linewidth=1
-        )
+        ax.plot(traj_2d[:, i, 0], traj_2d[:, i, 1], color=colors[i], alpha=0.5, linewidth=1)
         ax.scatter(
             traj_2d[0, i, 0],
             traj_2d[0, i, 1],
@@ -555,7 +551,6 @@ visualize_trajectory_2d(trajectory, "ResNet Trajectory (2D)")
 
 ```08_resnet_vs_ode.py
 import torch
-
 
 TORCHDIFFEQ_AVAILABLE = False
 
