--- a/series/13.md
+++ b/series/13.md
@@ -323,13 +323,11 @@ def fgsm_attack(model, x, y, epsilon=0.01, clip_min=0.0, clip_max=1.0):
 ### MoEモデルの利用例（Hugging Face transformers）
 
 ```13_mixtral_load.py
-from transformers import MixtralForCausalLM, AutoTokenizer
 import torch
+from transformers import AutoTokenizer, MixtralForCausalLM
 
 # Mixtral-8x7B のロード
-model = MixtralForCausalLM.from_pretrained(
-    "mistralai/Mixtral-8x7B-v0.1", torch_dtype=torch.float16, device_map="auto"
-)
+model = MixtralForCausalLM.from_pretrained("mistralai/Mixtral-8x7B-v0.1", torch_dtype=torch.float16, device_map="auto")
 tokenizer = AutoTokenizer.from_pretrained("mistralai/Mixtral-8x7B-v0.1")
 ```
 
