--- a/series/00.md
+++ b/series/00.md
@@ -92,9 +92,7 @@ def slerp(v0, v1, t):
 
     # Slerp公式
     sin_theta = torch.sin(theta)
-    return (torch.sin((1 - t) * theta) / sin_theta) * v0 + (
-        torch.sin(t * theta) / sin_theta
-    ) * v1
+    return (torch.sin((1 - t) * theta) / sin_theta) * v0 + (torch.sin(t * theta) / sin_theta) * v1
 ```
 
 > [!CAUTION]
@@ -345,9 +343,7 @@ def slerp(v0, v1, t):
     if theta.abs() < 1e-6:
         return v0
     sin_theta = torch.sin(theta)
-    return (torch.sin((1 - t) * theta) / sin_theta) * v0 + (
-        torch.sin(t * theta) / sin_theta
-    ) * v1
+    return (torch.sin((1 - t) * theta) / sin_theta) * v0 + (torch.sin(t * theta) / sin_theta) * v1
 
 
 def lerp(v0, v1, t):
