--- a/series/02.md
+++ b/series/02.md
@@ -262,8 +262,8 @@ Hintonの苦闘は、根本的な問いを投げかける：
 ### 距離の集中の可視化
 
 ```02_distance_concentration.py
-import numpy as np
 import matplotlib.pyplot as plt
+import numpy as np
 
 np.random.seed(42)
 
@@ -294,13 +294,11 @@ results = distance_concentration(dims)
 print("次元 | 平均距離 | 標準偏差 | 相対標準偏差")
 print("-" * 45)
 for r in results:
-    print(
-        f"{r['dim']:4d} | {r['mean']:8.2f} | {r['std']:8.2f} | {r['relative_std']:8.4f}"
-    )
+    print(f"{r['dim']:4d} | {r['mean']:8.2f} | {r['std']:8.2f} | {r['relative_std']:8.4f}")
 
 # ヒストグラムの可視化
 fig, axes = plt.subplots(1, 4, figsize=(16, 3))
-for ax, r in zip(axes, results):
+for ax, r in zip(axes, results, strict=False):
     ax.hist(r["distances"], bins=50, density=True, alpha=0.7)
     ax.axvline(r["mean"], color="red", linestyle="--", label=f"mean={r['mean']:.1f}")
     ax.set_title(f"d = {r['dim']}")
@@ -313,8 +311,8 @@ plt.show()
 ### 高次元での直交性の確認
 
 ```02_highdim_orthogonality.py
-import numpy as np
 import matplotlib.pyplot as plt
+import numpy as np
 
 np.random.seed(42)
 
@@ -362,7 +360,7 @@ for r in results:
 
 # 角度のヒストグラム
 fig, axes = plt.subplots(1, 4, figsize=(16, 3))
-for ax, r in zip(axes, results):
+for ax, r in zip(axes, results, strict=False):
     ax.hist(r["angles"], bins=50, density=True, alpha=0.7)
     ax.axvline(90, color="red", linestyle="--", label="90°")
     ax.set_title(f"d = {r['dim']}")
@@ -376,8 +374,8 @@ plt.show()
 ### Word2Vecにおけるノルムと頻度の関係（概念実験）
 
 ```02_word2vec_norm_frequency.py
-import numpy as np
 import matplotlib.pyplot as plt
+import numpy as np
 
 np.random.seed(42)
 
