長いPythonコードの表示方針追加

--- a/series/06.md
+++ b/series/06.md
@@ -265,6 +265,9 @@ $$\text{output}_i = \sum_j \alpha _{ij} \mathbf{v} _j$$
 
 ### 標準的なScaled Dot-Product Attention
 
+<details>
+<summary>コード例: 06_scaled_dot_product_attention.py</summary>
+
 ```06_scaled_dot_product_attention.py
 import math
 
@@ -303,7 +306,12 @@ def scaled_dot_product_attention(Q, K, V, mask=None):
     return output, attention_weights
 ```
 
+</details>
+
 ### Cosine Attention（L2正規化版）
+
+<details>
+<summary>コード例: 06_cosine_attention.py</summary>
 
 ```06_cosine_attention.py
 import math
@@ -367,7 +375,12 @@ print("標準Attention: scores range depends on norms")
 print("Cosine Attention: scores in [-1, 1] (cosine similarity)")
 ```
 
+</details>
+
 ### RoPEの実装
+
+<details>
+<summary>コード例: 06_rope.py</summary>
 
 ```06_rope.py
 import math
@@ -452,7 +465,12 @@ K_rope = apply_rope(K, freqs_cos, freqs_sin)
 out_rope, attn_rope = scaled_dot_product_attention(Q_rope, K_rope, V)
 ```
 
+</details>
+
 ### Multi-head Attentionの完全な実装
+
+<details>
+<summary>コード例: 06_multi_head_attention.py</summary>
 
 ```06_multi_head_attention.py
 import math
@@ -549,6 +567,8 @@ class MultiHeadAttention(nn.Module):
 
         return self.W_o(output)
 ```
+
+</details>
 
 ## まとめ
 
