--- a/series/07.md
+++ b/series/07.md
@@ -254,6 +254,9 @@ $\kappa$ **の崩壊**：学習が進むと、すべての $\kappa$ が極端に
 
 ### vMF分布のパラメータ化
 
+<details>
+<summary>コード例: 07_vmf_layer.py</summary>
+
 ```07_vmf_layer.py
 import torch
 import torch.nn as nn
@@ -300,9 +303,14 @@ class vMFLayer(nn.Module):
         return mu, kappa
 ```
 
+</details>
+
 ### vMF分布からのサンプリング
 
 vMF分布からのサンプリングは、rejection samplingやWood's algorithmを使う。以下は高次元で効率的な方法：
+
+<details>
+<summary>コード例: 07_vmf_sampling.py</summary>
 
 ```07_vmf_sampling.py
 import math
@@ -429,10 +437,15 @@ def _householder_rotation(x, u, v):
     return x_result
 ```
 
+</details>
+
 ### vMF間のKLダイバージェンス
 
 > [!CAUTION]
 > **以下の実装は高κ・高次元での漸近近似に基づく。** κが小さい領域（まさに不確実性が高く重要な領域）では近似誤差が大きくなる。厳密な計算が必要な場合は、scipy.special.ive（スケール付きBessel関数）等を使った安定実装を検討すること。詳細はDiethe (2015) を参照。
+
+<details>
+<summary>コード例: 07_vmf_kl_divergence.py</summary>
 
 ```07_vmf_kl_divergence.py
 import math
@@ -527,6 +540,8 @@ def _log_normalizer_vmf_exact(kappa, dim):
 kl_divergence_vmf = kl_divergence_vmf_approx
 ```
 
+</details>
+
 ### 確信度に基づくOOD検知
 
 > [!IMPORTANT]
@@ -535,6 +550,9 @@ kl_divergence_vmf = kl_divergence_vmf_approx
 > - 閾値の選定（Precision-Recallトレードオフの確認）
 > - 温度スケーリング等によるκの校正
 > - 分布内/分布外のκ分布の可視化
+
+<details>
+<summary>コード例: 07_ood_detector.py</summary>
 
 ```07_ood_detector.py
 import warnings
@@ -635,7 +653,12 @@ print(f"  OOD: {detector.is_ood(kappa_out_of_distribution)}")
 print(f"  Confidence: {detector.get_confidence(kappa_out_of_distribution)}")
 ```
 
+</details>
+
 ### 座標フリーの分布比較
+
+<details>
+<summary>コード例: 07_coordinate_free_comparison.py</summary>
 
 ```07_coordinate_free_comparison.py
 import torch
@@ -677,11 +700,16 @@ for k, v in comparison.items():
     print(f"  {k}: {v}")
 ```
 
+</details>
+
 ## Visualization Break：Attentionの幾何学を見る
 
 本回の最後に、Attentionと不確実性の関係を可視化するデモを示す。
 
 ### デモ：確信度を持つAttention
+
+<details>
+<summary>コード例: 07_attention_uncertainty_viz.py</summary>
 
 ```07_attention_uncertainty_viz.py
 import matplotlib.pyplot as plt
@@ -748,6 +776,8 @@ kappa = np.array([45.0, 8.0, 50.0, 55.0, 35.0])
 
 visualize_attention_with_uncertainty(sentence, attention, kappa)
 ```
+
+</details>
 
 この可視化は、以下を示している：
 
