--- a/series/09.md
+++ b/series/09.md
@@ -43,6 +43,11 @@
 - **幾何学的視点の価値:**
     - ガウスへ拡散する場合でも、「確率分布の時間発展」という視点は強い
     - スコア関数は「確率の流れの方向」を表す（幾何学的解釈）
+- 「ベクトルを足し引きする」直感の復権
+    - 昔はword2vecの「王 - 男 + 女 = 女王」が、ある種のトイ・プロブレム（おもちゃのような例題）に見えた。
+    - しかし、今の確率フローODEの世界では、これは**「意味の方向性（ベクトル場）に沿って状態を積分する」**という、極めて厳密な力学計算として再評価されている。
+    - 「昔の描いた直線のベクトルは、実は巨大な多様体の上を走る『接ベクトル』の断片だった」
+    - 今のAIは、その断片を無数に繋ぎ合わせて、滑らかな「思考の道」を作れるようになっただけ
 
 ## 実装ノート
 
